data/derived/fa15/progs/unify/prog4035.ml.out
Characters 175-204:
  | Sine f'                -> Printf.sprintf("sin(%s)", exprToString(f'))
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type
         ('c, unit, string) format =
           ('c, unit, string, string, string, string)
           CamlinternalFormatBasics.format6
